# serveur_rpi_poetry

./: README.md  docker-compose.yaml
rpiserver/: Dockerfile  pyproject.toml
rpiserver/rpiserver/: server.py
rpiserver/tests/: test_rpiserver.py
